<resources>
    <string name="app_name">ElearningApp</string>
    <string name="title_login">Bienvenido</string>
    <string name="title_signup">¡Comencemos!</string>
    <string name="subtitle_login">Inicie sesión en su cuenta existente de e-learning</string>
    <string name="subtitle_signup">Crea una cuenta de e-learning para obtener todas las características</string>
    <string name="input_email_login">Nombre de usuario</string>
    <string name="input_password_login">Contraseña</string>
    <string name="input_name_signup">Nombre</string>
    <string name="input_email_signup">Correo electrónico</string>
    <string name="input_mobile_signup">Número de teléfono</string>
    <string name="input_createpass_signup">Crear contraseña</string>
    <string name="input_confirmpass_signup">Confirmar contraseña</string>
    <string name="title_forgot_login">¿Olvidó su contraseña?</string>
    <string name="title_button_login">Iniciar sesión</string>
    <string name="title_button_signup">Registrate</string>
    <string name="subtitle_button_login">O conéctese usando</string>
    <string name="title_footer_signup">¿Ya tienes una cuenta?</string>
    <string name="title_footer_login">¿No tienes una cuenta?</string>
    <string name="title_footer_signup_login">Iniciar sesión</string>
    <string name="title_footer_login_signup">Inicia sesión ahora</string>>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_confirmpass_newpass">Confirmar nueva contraseña</string>
    <string name="title_button_update">Actualizar</string>
    <string name="title_button_update2">Actualizar</string>
    <string name="title_profile_edit">Cambiar la información del perfil</string>
    <string name="title_profile_change_pass">Cambiar contraseña</string>
    <string name="title_profile_logout">Cerrar sesión</string>
    <string name="title_profile">Editar perfil</string>
    <string name="input_createpass_newpass">Crear nueva contraseña</string>
    <string name="name_course">Curso</string>
    <string name="tvDuration">10</string>
    <string name="tv_price">10</string>
    <string name="buttonDesign">Diseño</string>
    <string name="buttonProg">Programación</string>
    <string name="buttonWeb">Desarrollo Web</string>
    <string name="buttonAll">Ver todo</string>
    <string name="text_fragment_courses">Categoría</string>
    <string name="buys">Mis cursos</string>
    <string name="buttonBuy">Comprar</string>
    <string name="buttonPlay">Ver curso</string>
    <string name="title_fragment_home">Inicio</string>
    <string name="title_fragment_course">Mis cursos</string>

    <!-- textos para la push simple -->
    <string name="simple_title">Alerta de Sistema</string>
    <string name="simple_body">¡Esta es nuestra primera notificación creada!</string>
    <!-- textos para la push con acción -->
    <string name="action_title">Cursos Bedu</string>
    <string name="action_body">¡Espera los nuevos cursos que Bedu ha preparado para ti!</string>
    <!-- textos para la push con botón -->
    <string name="button_title">Bedu</string>
    <string name="button_body">Da click en el botón de abajo para ejecutar una acción</string>
    <string name="button_text">Aceptar</string>
    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- CANAL CURSOS -->
    <string name="channel_courses">cursos</string>
    <string name="courses_description">Notificaciones acerca de cursos impartidos</string>
    <!-- CANAL OTROS -->
    <string name="channel_others">Diversos</string>
    <string name="others_description">Otras notificaciones</string>

    <string name="simple_title_2">Bedu</string>
    <string name="simple_body_2">¡Segunda notificación para probar los grupos!</string>

    <string name="simple_title_3">Bedu</string>
    <string name="simple_body_3">¡Y otra notificación extra!</string>
</resources>